web api - 태그 교체, 삭제

--- a/2. web-api/2. DOM 제어/3. 텍스트, 태그 조작.html
+++ b/2. web-api/2. DOM 제어/3. 텍스트, 태그 조작.html
@@ -27,7 +27,7 @@
         console.log($greet.textContent.trim()); // trim() 앞뒤 공백 제거
         console.log($greet.innerHTML);
 
-        $greet.textContent = 'Hello Javascript!'    // 인라인태그들은 다 사라짐
+        // $greet.textContent = 'Hello Javascript!'    // 인라인태그들은 다 사라짐
         // $greet.firstElementChild.textContent = 'Javascript' 
         $greet.innerHTML = 'Hello <span>Javascript!</span>' // 태그와 함께 조작해야한다면 innerHTML사용
 
