web api - 데이터 속성 수정

--- a/2. web-api/3. 속성노드/4. 데이터속성.html
+++ b/2. web-api/3. 속성노드/4. 데이터속성.html
@@ -16,7 +16,7 @@
         const [$u1, $u2] = [...document.querySelectorAll('.users li')];
 
         const pororoNumber = $u1.dataset.userNumber;
-        console.log(pororoNumber + 10); //오류
+        console.log(pororoNumber + 10); // console.log(+pororoNumber + 10) 4431
 
         const pinguRole = $u2.dataset.role;
         console.log(pinguRole);
