--- a/2. web-api/App/Movie/index.html
+++ b/2. web-api/App/Movie/index.html
@@ -51,7 +51,16 @@
       <section id="entry-text" class="card">
         <p>나의 개인 저장공간~</p>
       </section>
-      <ul id="movie-list"></ul>
+      <ul id="movie-list">
+        <!-- <li class="movie-element">
+          <div class="movie-element__image">
+            <img src="http://t1.daumcdn.net/cfile/116F1B10AB75CD33EE" alt="">
+          </div>
+          <div class="movie-element__info">
+            <img src="" alt="">
+          </div>
+        </li> -->
+      </ul>
     </main>
   </body>
 </html>
