--- a/2. web-api/App/Movie/index.html
+++ b/2. web-api/App/Movie/index.html
@@ -54,10 +54,11 @@
       <ul id="movie-list">
         <!-- <li class="movie-element">
           <div class="movie-element__image">
-            <img src="http://t1.daumcdn.net/cfile/116F1B10AB75CD33EE" alt="">
+            <img src="https://img.cgv.co.kr/Movie/Thumbnail/StillCut/000084/84949/84949197480_727.jpg" alt="">
           </div>
           <div class="movie-element__info">
-            <img src="" alt="">
+            <h2>스파이더맨</h2>
+            <p>5 / 5</p>
           </div>
         </li> -->
       </ul>
